# distributed-key-value-store

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/: kv_benchmark.cpp  kv_cli.cpp  kv_node.cpp
benchmarks/: README.md  methodology.md
config/: docker-node1.json  docker-node2.json  docker-node3.json  node1.json  node2.json  node3.json  single-node.json
docker/: Dockerfile
docs/: api.md  architecture.md  consistency-model.md  failure-model.md  limitations.md  resume-claims.md  testing.md
include/kv/: config.hpp  failure_detector.hpp  hash_ring.hpp  http.hpp  metrics.hpp  node.hpp  peer_client.hpp  replication.hpp  storage_engine.hpp  thread_pool.hpp  types.hpp  wal.hpp
scripts/: benchmark.sh  build.sh  failure_test.sh  recovery_benchmark.sh  run_cluster.sh  smoke_test.sh  stop_cluster.sh
src/: config.cpp  failure_detector.cpp  hash_ring.cpp  http.cpp  metrics.cpp  node.cpp  peer_client.cpp  replication.cpp  storage_engine.cpp  thread_pool.cpp  types.cpp  wal.cpp
tests/failure/: failure_tests.cpp
tests/integration/: integration_tests.cpp
tests/unit/: unit_tests.cpp
